# llm_inferece

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
MK1/: README.md  client.py  views.py
MK1/utils/: time_decorator.py
MK1_/: models.py
docs/: article_notes.md  fast_inference_with_mk1.md  feedback.md  inference_systems_mk1.md  inference_the_right_way.md  intro.md
mk1/: README.md  client.py  frontend_example.py  modal_endpoint.py
modal/: client.py  hello_world.py  vllm_mixtral.py
